# Lattice

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  DEBUG_HANG.md  README.md
.claude/skills/arcgen-pipeline/: SKILL.md
.github/workflows/: ci.yml  integration.yml
crates/core/: CLAUDE.md  Cargo.toml
crates/core/src/: error.rs  event.rs  lib.rs  llm.rs  router.rs  sandbox.rs  session.rs  tool.rs  traits.rs
crates/llm-anthropic/: CLAUDE.md  Cargo.toml
crates/llm-anthropic/src/: client.rs  lib.rs  types.rs
crates/llm-openai/: CLAUDE.md  Cargo.toml
crates/llm-openai/src/: client.rs  codex_cli.rs  lib.rs  types.rs
crates/llm-openai/tests/: integration.rs
crates/llm-protocol/: CLAUDE.md  Cargo.toml
crates/llm-protocol/src/: convert.rs  lib.rs  message.rs  parse.rs  request.rs  response.rs
crates/mcp/: CLAUDE.md  Cargo.toml
crates/mcp/src/: integration.rs  lib.rs  manager.rs  resource_tools.rs  tool_adapter.rs  types.rs
crates/mcp/tests/: remote_transports.rs  stdio_flow.rs
crates/runtime/: CLAUDE.md  Cargo.toml
crates/runtime/src/: control_loop.rs  control_loop.rs.bak  lib.rs  router.rs
crates/sandbox-local/: CLAUDE.md  Cargo.toml
crates/sandbox-local/src/: lib.rs  local_sandbox.rs
crates/server/: CLAUDE.md  Cargo.toml
crates/server/crates/server/tests/: agent_run_api_tests.rs
crates/server/src/: api.rs  error.rs  lib.rs  main.rs  streaming.rs  ui.rs
crates/server/src/api/: sessions.rs  types.rs
crates/server/src/ui/: app.css  app.js  index.html
crates/server/tests/: agent_run_api_tests.rs
crates/skill/: Cargo.toml
crates/skill/src/: definition.rs  lib.rs  loader.rs  tool.rs  tool_set.rs
crates/store-memory/: CLAUDE.md  Cargo.toml
crates/store-memory/src/: lib.rs  memory_store.rs
crates/tools/: CLAUDE.md  Cargo.toml
crates/tools/src/: bash.rs  lib.rs  set.rs
docs/: AI_WORKFLOW.md  ARCHITECTURE.md  MCP-PANGEN-SERVER.md  MVP_SCOPE.md  ROADMAP.md  TECH_STACK.md  skill-pr-rebase-progress.md
examples/hello-agent/: Cargo.toml
examples/hello-agent/src/: main.rs  mock_llm.rs
examples/meta-agent/: Cargo.toml
examples/meta-agent/src/: main.rs  mock_llm.rs
examples/real-agent/: Cargo.toml
examples/real-agent/src/: main.rs
scripts/: check.ps1  check.sh  test-local.ps1  test-local.sh
skills/arcgen-pipeline/: SKILL.md
skills/code-review/: SKILL.md
skills/web-research/: SKILL.md
src/: lib.rs
tasks/: 01-init-workspace.md  02-setup-ci.md  03-core-traits.md  04-store-memory.md  05-sandbox-local.md  05.1-windows-compatibility.md  06-runtime.md  06.1-fix-control-loop-performance.md  07-hello-agent.md  08-llm-protocol.md  09-llm-anthropic.md  10-llm-openai.md  10.1-multi-tool-call-support.md  11-real-agent.md  12-facade-features.md  13-server-skeleton.md  13.1-ui-markdown-rendering.md  14-session-api.md  15-agent-run-api.md  15-tool-system.md  15.1-platform-aware-tool.md  16-agent-run-api.md  16-sse-stream.md  17-config-provider.md  17-sse-stream.md  18-config-provider.md  18-docker-deploy.md  19-docker-deploy.md  20-1-execution-context.md  20-2-session-tree.md  20-3-tool-execute-ctx.md  20-4-control-loop-ctx.md  20-5-skill-crate.md  20-6-skill-facade.md  README.md
tests/: e2e.rs  skill_loading.rs
