[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/runtime",
    "crates/store-memory",
    "crates/sandbox-local",
    "examples/hello-agent",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Lattice Contributors"]
rust-version = "1.79"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mockall = "0.13"
