[package]
name = "lattice"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "A Rust meta-framework for building AI agents, inspired by Anthropic's managed agents architecture."

[lib]
path = "src/lib.rs"

[features]
default = ["runtime", "store-memory", "sandbox-local", "tools"]

# Core runtime (transitively pulls in lattice-tools)
runtime = ["dep:lattice-runtime"]

# Store backends
store-memory = ["dep:lattice-store-memory"]

# Sandbox implementations
sandbox-local = ["dep:lattice-sandbox-local"]

# Tool set (ToolSet + standard tools)
tools = ["dep:lattice-tools"]

# Skill system
skill = ["dep:lattice-skill", "runtime", "tools"]

# LLM backends
llm-protocol = ["dep:lattice-llm-protocol"]
llm-anthropic = ["llm-protocol", "dep:lattice-llm-anthropic"]
llm-openai = ["llm-protocol", "dep:lattice-llm-openai"]
llm-all = ["llm-anthropic", "llm-openai"]

# Convenience
full = ["runtime", "store-memory", "sandbox-local", "llm-all", "tools", "skill"]

[dev-dependencies]
dotenvy = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }

[dependencies]
lattice-core = { path = "crates/core" }
lattice-runtime = { path = "crates/runtime", optional = true }
lattice-store-memory = { path = "crates/store-memory", optional = true }
lattice-sandbox-local = { path = "crates/sandbox-local", optional = true }
lattice-tools = { path = "crates/tools", optional = true }
lattice-skill = { path = "crates/skill", optional = true }
lattice-llm-protocol = { path = "crates/llm-protocol", optional = true }
lattice-llm-anthropic = { path = "crates/llm-anthropic", optional = true }
lattice-llm-openai = { path = "crates/llm-openai", optional = true }

[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/mcp",
    "crates/runtime",
    "crates/store-memory",
    "crates/sandbox-local",
    "crates/skill",
    "crates/llm-protocol",
    "crates/llm-anthropic",
    "crates/llm-openai",
    "crates/tools",
    "crates/server",
    "examples/hello-agent",
    "examples/real-agent",
    "examples/meta-agent",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Lattice Contributors"]
rust-version = "1.79"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mockall = "0.13"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1"
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
rmcp = { version = "1.5.0", default-features = false, features = ["client", "server", "macros", "transport-child-process", "transport-io"] }
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
tempfile = "3"
