[package]
name = "lattice-llm-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
lattice-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
uuid = { workspace = true }
