[package]
name = "lattice-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rmcp = { workspace = true }
lattice-core = { path = "../core" }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
lattice-tools = { path = "../tools" }
