[package]
name = "lattice-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rmcp = { workspace = true, features = ["transport-streamable-http-client-reqwest"] }
lattice-core = { path = "../core" }
lattice-tools = { path = "../tools" }
async-trait = { workspace = true }
http = "1"
futures-util = "0.3"
tokio-tungstenite = "0.24"

[dev-dependencies]
tokio = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
tokio-util = "0.7"
