[package]
name = "lattice-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[features]
default = ["bash"]
bash = ["lattice-sandbox-local"]

[dependencies]
lattice-core = { path = "../core" }
lattice-sandbox-local = { path = "../sandbox-local", optional = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
